# sifi

./: README.md  Scratch.hs  TODO.txt  dpm.cfg  sifi.cabal  ssah.cabal  stack.yaml
bak/: Old.hs
bak/Scanner/: Grammar.y  Test.hs
cli/: Main.hs
resources/: hssa.cfg  hssa.htm  sifi.cfg  sifi.htm
src/: Aggregate.hs  Args.hs  Browser.hs  Cgt.hs  Comm.hs  ConfigParser.hs  Dps.hs  Epics.hs  Etb.hs  Etran.hs  Financial.hs  Foo.hs  Html.hs  Ledger.hs  Lexer.x  ListUtils.hs  Main.hs  Nacc.hs  Parsecy.hs  Parser.hs  Portfolio.hs  Post.hs  Returns.hs  Snap.hs  Types.hs  Utils.hs  Yahoo.hs
src/Scanner/: Lexer.x  README.txt
test/: Parsecy.hs  TestArgs.hs  TestLexer.hs  TestListUtils.hs  TestParser.hs  Testutils.hs  parse01.txt  parse02.txt
