name:                sifi
version:             10.0.0.0
synopsis:            Simple set of accounts using Haskell
homepage:            http://www.markcarter.me.uk
license:             GPL-3
license-file:        LICENSE
author:              mark carter
maintainer:          alt.mcarter@gmail.com
category:            Finance
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Etb, Args, Ledger, Types, Yahoo, Utils
  ghc-options:         
                       -fno-warn-tabs 
  build-depends:       base == 4.9.0.0
                       -- array is required by Lexer
                     , array >= 0.5.1 && < 0.6
                     , async == 2.1.0
                     , bytestring >= 0.9.2.1
                     , containers >= 0.3
                     , data-ordlist >=0.4 && < 0.5
                     , directory >=1.2 && <1.3
                     , file-embed >= 0.0.8.2
                     , fgl >= 5.5.1.0
                     , HTTP == 4000.3.3
                     , HUnit >= 1.3 && < 1.4
                     , lens == 4.14
                     , MissingH >= 1.3
                     , multiset >= 0.3 && < 0.4
                     , old-locale >= 1.0
                     , parsec >= 3.1.5
                     , process >= 1.0.1.1
                     , safe >= 0.3.9
                     , split >=0.2 && <0.3
                     , template-haskell == 2.11.0.0
                     , time >= 1.4
                     , tuple >= 0.3
  extra-source-files:  Lexer.x
  build-tools:         alex
  other-modules:       Browser
                     , Cgt, Comm
                     , ConfigParser
                     , Epics
                     , Etran
                     , Financial
                     , Foo
                     , Html
                     , Lexer
                     , ListUtils
                     , Nacc
                     , Paths_sifi
                     , Parser, Portfolio, Post
                     , Returns
                     , Snap
  default-language:    Haskell2010


executable sifi
  hs-source-dirs:      cli
  main-is:             Main.hs
  build-depends:       base == 4.9.0.0
                     , sifi

  default-language:    Haskell2010


